--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -24,7 +24,7 @@ These commutative rings are known to satisfy all of your criteria:
 These rings are consistent with your criteria, but may not satisfy your criteria when more data is supplied.
 {% endif %}
 <br>
-Search results:<br>
+<h2>Search results</h2>
 
     <ul>
     {% for item in main_results %}
