--- a/ringapp/templates/ringapp/browsetheorems.html
+++ b/ringapp/templates/ringapp/browsetheorems.html
@@ -11,7 +11,11 @@ You are now browsing theorems we have on record.
 {% if theorem_list %}
     <ul>
     {% for item in theorem_list %}
+        {% if item.alias %}
+        <li><a href="theorem/{{ item.theorem_id }}/">{{ item.alias }}</a></li>
+        {% else %}
         <li><a href="theorem/{{ item.theorem_id }}/">{{ item.statement }}</a></li>
+        {% endif %}
     {% endfor %}
     </ul>
 {% else %}
