--- a/ringapp/templates/ringapp/viewcommprop.html
+++ b/ringapp/templates/ringapp/viewcommprop.html
@@ -8,29 +8,15 @@
 
 {% if property_id %}
     <ul>
-Property name: {{ prop.name }}<br>
-Definition: {{ prop.definition }}<br>
-Rings with property: {{ hasnum }}<br>
-Rings without property: {{ lacksnum }}<br>
+    Property name: {{ prop.name }}<br>
+    Definition: {{ prop.definition }}<br>
+    Rings with property: {{ hasnum }}<br>
+    Rings without property: {{ lacksnum }}<br>
     </ul>
     
-These rings have this property:
     <ul>
-    {% for item in has_rings %}
-        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
-    {% endfor %}
-    </ul>
-These rings lacks the property:
-    <ul>
-    {% for item in lacks_rings %}
-        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
-    {% endfor %}
-    </ul>
-We don't know if these rings have or lacks the property:
-    <ul>
-    {% for item in other_rings %}
-        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
-    {% endfor %}
+        <li><a href="{% url 'cresults' %}{{ has_url }}">View rings having this property</a></li>
+        <li><a href="{% url 'cresults' %}{{ lacks_url }}">View rings not having this property</a></li>
     </ul>
     
 {% else %}
