--- a/ringapp/templates/ringapp/viewcommring.html
+++ b/ringapp/templates/ringapp/viewcommring.html
@@ -11,7 +11,18 @@
         <li>Name: {{ r.name }}</li>
         <li>Description: {{ r.description }}</li>
         <li>Notes: {{ r.notes }}</li>
-        <li>Reference: {{ r.reference }}</li>
+        <li>Reference(s):
+            {% if ref_list %}
+            <ul>
+            {% for ref in ref_list %}
+            <li>{{ ref.title }}</li>
+            {% endfor %}
+
+            {% else %}
+            <li>(Citation needed)</li>
+            {% endif %}
+            </ul>
+        </li>
     </ul>
 This ring has the following properties:
     <ul>
