Google verificatino tag

--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -4,6 +4,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>DaRT - {% block title %}Database of Ring Theory{% endblock %}</title>
+        <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
     </head>
 
     <body>
