Finally satisfied with the test results of two new processing functions. Also expanding copyright years.

--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -18,7 +18,7 @@
         </div>
         <hr />
         <footer>
-          <p>© Ryan C. Schwiebert 2014 | <a href="#top">Top</a> | Site map</p>
+          <p>© Ryan C. Schwiebert 2014-2015 | <a href="#top">Top</a> | Site map</p>
         </footer>
     </body>
 </html>
