Employing use of ModelChoiceField to eliminate some subtle bugs.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -21,8 +21,8 @@
 <h2>Specialized commutative ring database</h2>
 (This database exclusively carries commutative rings and has more specific properties that apply only to commutative
     rings.)
-<li>Browse: <a href="commrings">rings</a> | <a href="commproperties">properties</a> | <a href="theorems">theorems</a></li>
-<li>Search: <a href="commsearch">rings</a> | properties | theorems</li>
+<li>Browse: <a href="commrings">commutative rings</a> | <a href="commproperties">commutative ring properties</a> </li>
+<li>Search: <a href="commsearch">commutative rings</a> | commutative ring properties </li>
 
 
 <h2>Get involved</h2>
