--- a/ringapp/templates/ringapp/commsearch.html
+++ b/ringapp/templates/ringapp/commsearch.html
@@ -7,7 +7,7 @@
 <h1>Commutative ring search</h1>
 
 Search the database of commutative rings<br><br>
-The complied data is, naturally, incomplete. The status of a property for a given ring can be in three states: "has property," "doesn't have the property," and "unknown." Choosing narrow scope ensures that the results are known to match all inputs. Choosing wide scope excludes all rings that do not fit all inputs. So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.<br>
+The compiled data is, naturally, incomplete. The status of a property for a given ring can be in three states: "has property," "doesn't have the property," and "unknown." Choosing narrow scope ensures that the results are known to match all inputs. Choosing wide scope excludes all rings that do not fit all inputs. So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.<br>
 <br>
 
 <form action="commresults/" method="get">
