Added citations inline on Publications. Processor is now accessible from main admin page. Update guides accordingly.

--- a/ringapp/templates/admin/guides.html
+++ b/ringapp/templates/admin/guides.html
@@ -36,7 +36,11 @@
 
             </ul>
         </li>
-        <li>(Under construction: run the processor on your ring.)</li>
+        <li>On the admin home page, click the "processor" link. Select your ring from the dropdown, then hit "process."
+        The processor will draw all conclusions that it possibly can with current data. Running the processor twice in
+            a row will not add anything, but if you manually add new properties to the ring, then processing again may
+            add new entries.</li>
+        <li>You will probably get a "success" message, but if instead you get an error message, get in contact with me.</li>
         <li>Tips:
             <ul>
                 <li>If the form demands content in one of the text fields, you can skirt it by submitting whitespace.</li>
