--- a/ringapp/templates/admin/index.html
+++ b/ringapp/templates/admin/index.html
@@ -47,7 +47,7 @@
     <div class="app-{{ app.app_label }} module">
         <table>
             <a href="{% url 'guides' %}">Guides to get you started</a><br>
-            <a href="{% url 'utilities' %}">Utilities under construction here.</a>
+            <a href="{% url 'processor' %}">Ring processor</a>
         </table>
         </div>
     <div>
