Revised guides since new CommRing interface is in place. Removed lines for managing ring-property relationships since it would be better to do them through the ring managers.

--- a/ringapp/templates/admin/guides.html
+++ b/ringapp/templates/admin/guides.html
@@ -19,17 +19,17 @@
         to the next steps.</li>
         <li>Make a record for your ring
             <ul>
-                <li>On the admin home page, click the "add" option in the row for Ring.</li>
+                <li>On the admin home page, click the "add" option in the row for Ring (or Commutative ring, if
+                    applicable. A commutative ring can be created in either place.)</li>
                 <li>Fill in as much information for the ring as you can (use the keyword selector and ignore kwd.)</li>
-                <li>Hopefully you had some key properties of the ring in mind. You ought to add (noncommutative style)
+                <li>Hopefully you had some key properties of the ring in mind. You ought to add
                     properties to the ring via the following steps.</li>
-                <li>The bottom of the form has a few rows to associate properties with the ring. (When I get things fixed,
-                    you will be able to request another row whenever you need one.
+                <li>The bottom of the form has a few rows to associate properties with the ring.
                     <ul>
                         <li>Select a property you are interested in from the drop-down in the row.</li>
                         <li>In "has property," put a 1 if the ring HAS the property, and a 0 if it does NOT have the property.</li>
                         <li>Use the "reason" field if the reason is something very straightforward. Use the "source"
-                            field to include a citation if you can.</li>
+                            field to include a citation if you can. Please use at least one of these fields!</li>
                     </ul>
                 </li>
                 <li>Hit "save." Your ring is now in the database, and is associated with the properties you entered.</li>
@@ -51,15 +51,12 @@
 
 <h2>How to modify properties on an existing ring</h2>
     <ul>
-        <li>(Note: I'm currently implementing a parallel procedure for adding commutative style properties, but it is
-            not ready yet.)</li>
-        <li>Click the "change" link in the Ring row.</li>
+        <li>Click the "change" link in the Ring row (or Commutative ring row, if you want to modify its commutative
+            properties.)</li>
         <li>The form for the ring will appear, and at the bottom will be the currently associated properties, along with
         a few empty rows for you to add items. You can remove currently existing items (if you have permissions to do
         so.</li>
         <li>Once done modifying the associations, you hit the save button.</li>
-        <li>Alternatively, you can do this manually one at a time through the "Ring-property relationships" row.
-        To add commutative associations, use the "Commutative ring-property relationships" row.</li>
     </ul>
 
 <h2>How to add a citation</h2>
