--- a/ringapp/templates/ringapp/commlogic_detail.html
+++ b/ringapp/templates/ringapp/commlogic_detail.html
@@ -7,10 +7,10 @@
 <h1>Commutative implication detail</h1>
 
 
-{% if L %}
+{% if object %}
     <ul>
-        <li>Description: {{ L.readable }}</li>
-        <li>Reference: {{ L.citation }}</li>
+        <li>Description: {{ object.readable }}</li>
+        <li>Reference: {{ object.citation }}</li>
     </ul>
 
     
