--- a/ringapp/templates/ringapp/logic_detail.html
+++ b/ringapp/templates/ringapp/logic_detail.html
@@ -6,10 +6,10 @@
 
 <h1>Ring implication detail</h1>
 
-{% if L %}
+{% if object %}
     <ul>
-        <li>Description: {{ L.readable }}</li>
-        <li>Reference: {{ L.citation }}</li>
+        <li>Description: {{ object.readable }}</li>
+        <li>Reference: {{ object.citation }}</li>
     </ul>
 
     
