--- a/ringapp/templates/ringapp/commring_list.html
+++ b/ringapp/templates/ringapp/commring_list.html
@@ -8,10 +8,10 @@
 
 You are now browsing commutative rings we have on record.
 
-{% if ring_list %}
+{% if object_list %}
     <ul>
-    {% for item in ring_list %}
-        <li><a href="ring/{{ item.ring_id }}/">{{ item.name }}</a></li>
+    {% for item in object_list %}
+        <li><a href="{% url 'ring-detail' item.ring_id %}">{{ item.name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
