--- a/ringapp/templates/ringapp/logic_list.html
+++ b/ringapp/templates/ringapp/logic_list.html
@@ -8,14 +8,14 @@
 
 This is a listing of the implications used by the database.
 <br><br>
-<a href="{% url 'commlogics' %}">Switch to list of commutative ring implications</a>
+<a href="{% url 'commlogic-list' %}">Switch to list of commutative ring implications</a>
 
 <br><br>
 
-{% if logics %}
+{% if object_list %}
     <ul>
-    {% for item in logics %}
-     <li><a href="logic/{{ item.logic_id }}/">{{item.readable}}</a></li>
+    {% for item in object_list %}
+     <li><a href="{% url 'logic-detail' item.id %}/">{{ item.readable }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
