--- a/ringapp/templates/ringapp/property_detail.html
+++ b/ringapp/templates/ringapp/property_detail.html
@@ -6,16 +6,16 @@
 
 <h1>Property detail</h1>
 
-{% if property_id %}
+{% if object %}
     <ul>
-        Property name: {{ prop.name }}<br>
-        Definition: {{ prop.definition }}<br>
+        Property name: {{ object.name }}<br>
+        Definition: {{ object.definition }}<br>
         Rings with property: {{ hasnum }}<br>
         Rings without property: {{ lacksnum }}<br>
     </ul>
     <ul>
-        <li><a href="{% url 'results' %}{{ has_url }}">View rings having this property</a></li>
-        <li><a href="{% url 'results' %}{{ lacks_url }}">View rings not having this property</a></li>
+        <li><a href="{% url 'results' %}?scope=n&has1={{ object.pk }}">View rings having this property</a></li>
+        <li><a href="{% url 'results' %}?scope=n&lacks1={{ object.pk }}">View rings not having this property</a></li>
     </ul>
 {% if metaproperties %}
 
