--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -9,7 +9,7 @@
 
     <body>
         <header><p><a href="{% url 'index' %}">Home</a> | <a href="{% url 'about' %}">About</a> |
-            <a href="{% url 'about' %}#Contact">Contact</a></p>
+            <a href="{% url 'about' %}#Contact">Contact</a> | {% if not request.user.is_authenticated %}<a href="{% url 'login' %}">Login</a>{% else %}<a href="{% url 'logout' %}">Logout</a>{% endif %}</p>
             <name="top"/>
         </header>
         <hr />
