--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -3,6 +3,14 @@
 {% block title %}Contribute{% endblock %}
 
 {% block body_block %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
     <h1>Contribute</h1>
 The database is always growing, and is always in need of more content, especially ring examples and citations for specific claims.<br>
 <br>
@@ -14,15 +22,10 @@ To help maintain the quality of content and integrity of the database, please ke
 <li>Multiple high-quality citations are helpful. (Readers will have more places to look.)</li>
 
 <br>
-
-<form action="{% url 'suggestions' %}" method="get">
-    {{ chooser.non_field_errors }}
-    <div class="fieldWrapper">
-        {{ chooser.option.errors }}
-        <label for="option">How would you like to contribute?:</label>
-        {{ chooser.option }}
-    </div>
-    <p><input type="submit" value="Select" /></p>
+<h2>Contribution form</h2>
+<form action="" method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit suggestion" />
 </form>
 
 {% endblock %}
