--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -2,23 +2,80 @@
 
 <html>
     <head lang="en">
-        <meta charset="UTF-8">
-        <title>DaRT - {% block title %}Database of Ring Theory{% endblock %}</title>
+                <meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
+		<meta name="description" content="">
+		<meta name="author" content="Ryan C. Schwiebert">
+		
+		<title>DaRT - {% block title %}Database of Ring Theory{% endblock %}</title>
+		<link rel="icon" href="../../favicon.ico">
+		
+		<!-- Bootstrap core CSS -->
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
+		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+		<link href="/static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+		<!-- Custom styles for this template -->
+		<link href="/static/jumbotron.css" rel="stylesheet">
+
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
     </head>
 
     <body>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+		  <div class="container">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#">Database of Ring Theory</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+			  <form class="navbar-form navbar-right">
+				<div class="form-group">
+				  <input type="text" placeholder="Email" class="form-control">
+				</div>
+				<div class="form-group">
+				  <input type="password" placeholder="Password" class="form-control">
+				</div>
+				<button type="submit" class="btn btn-success">Sign in</button>
+			  </form>
+			</div><!--/.navbar-collapse -->
+		  </div>
+		</nav>
+
         <header><p><a href="{% url 'index' %}">Home</a> | <a href="{% url 'about' %}">About</a> |
             <a href="{% url 'about' %}#Contact">Contact</a> | {% if not request.user.is_authenticated %}<a href="{% url 'login' %}">Login</a>{% else %}<a href="{% url 'logout' %}">Logout</a>{% endif %}</p>
             <name="top"/>
         </header>
+
+
         <hr />
         <div>
             {% block body_block %}{% endblock %}
         </div>
-        <hr />
-        <footer>
-          <p>© Ryan C. Schwiebert 2014-2016 | <a href="#top">Top</a> | Site map</p>
+<footer>
+          <p>&copy;  Ryan C. Schwiebert 2014-2016 | <a href="#top">Top</a> | Site map</p>
         </footer>
+		<!-- Bootstrap core JavaScript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="/static/assets/js/vendor/jquery.min.js"><\/script>')</script>
+		<script src="/static/js/bootstrap.min.js"></script>
+		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+		<script src="/static/assets/js/ie10-viewport-bug-workaround.js"></script>        
+
     </body>
 </html>
