--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -4,48 +4,72 @@
 
 {% block body_block %}
 
-<h1 align="center">Welcome to the Database of Ring Theory!</h1>
-<p align="center">A repository of rings, their properties, and more ring theory stuff</p>
+<div>
+            
+		<!-- Main jumbotron for a primary marketing message or call to action -->
+		<div class="jumbotron">
+		  <div class="container">
+			<h1 align='center'>Welcome to the Database of Ring Theory!</h1>
+			<p align='center'>A repository of rings, their properties, and more ring theory stuff.</p>
+			<p align='center'><a class="btn btn-primary btn-lg" href="about#mission" role="button">Learn more &raquo;</a></p>
+		  </div>
+		</div>
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-4">
+			  <h2>Search</h2>
+			  <p>You can search for rings by their properties. If you are only interested in commutative rings, try the specialized search with expanded, commutative-only properties. </p>
+			  <p><a class="btn btn-default" href="search" role="button">All rings &raquo;</a><a class="btn btn-default" href="commsearch" role="button">Commutative rings &raquo;</a></p>
+			</div>
+			<div class="col-md-4">
+			  <h2>Browse</h2>
+			  <p>Explore what we've got:</p>
+			  <p><a class="btn btn-default" href="rings" role="button">All rings &raquo;</a><a class="btn btn-default" href="properties" role="button">All properties &raquo;</a></p>
+			  <p><a class="btn btn-default" href="commrings" role="button">Commutative rings &raquo;</a><a class="btn btn-default" href="commproperties" role="button">Commutative ring properties &raquo;</a></p>
+			  <p><a class="btn btn-default" href="theorems" role="button">Theorems &raquo;</a><a class="btn btn-default" href="bibliography" role="button">Cited works &raquo;</a></p>
+			</div>
+		  </div>
+		</div>
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-4">
+			  <h2>Contributing</h2>
+			  <p>There are a lot of ways you could help, even if you don't know what specifically what yet.</p>
+			  <p> <a class="btn btn-default" href="contribute" role="button">Contribute content &raquo;</a><a class="btn btn-default" href="https://github.com/rschwiebert/RingApp" role="button">I do GitHub &raquo;</a></p>
+			</div>
+			<div class="col-md-4">
+			  <h2>Learn</h2>
+			  <p>View a list of resources for studying ring theory.</p>
+			  <p><a class="btn btn-default" href="resources" role="button">Start learning &raquo;</a><a class="btn btn-default" href="properties" role="button">All properties &raquo;</a></p>
+		    </div>
+			
+		  </div>
+		</div>
+        <div class="container">
+		  <div class="row">
+			<div class="col-md-4">
+			  <h2>Other helpful sites</h2>
+			    <p>If you like this site, then you also might like these sites:</p>
+				<ul>
+					<li><a href="http://topology.jdabbs.com/">π-Base</a>: A community database of topological examples with
+						automated deduction and powerful search</li>
+					<li><a href="http://grdb.lboro.ac.uk/">Graded Ring Database</a>: A database of graded rings in algebraic geometry</li>
+					<li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its
+						Applications</a> at Ohio University</li>
+					<li><a href="http://stacks.math.columbia.edu/">The Stacks Project</a>: an open source textbook and reference work on
+						algebraic stacks and the algebraic geometry needed to define them</li>
+					<li><a href="http://ncatlab.org/nlab/show/HomePage">nLab</a>: a wiki-lab for collaborative work on Mathematics,
+						Physics and Philosophy </li>
+				</ul>
+			  </div>
+		  </div>
+		</div>
 
-<hr/>
-
-<h2>New to the site?</h2>
-<p><a href="about#mission">Here is all you need to know.</a></p>
-
-<h2>Full ring database</h2>
-(This database includes rings that are not necessarily commutative and properties that apply to them.)
-
-<li>Browse: <a href="rings">rings</a> | <a href="properties">properties</a> | <a href="theorems">theorems</a></li>
-<li>Search: <a href="search">rings</a> | properties | theorems</li>
-
-<h2>Specialized commutative ring database</h2>
-(This database exclusively carries commutative rings and has more specific properties that apply only to commutative
-    rings.)
-<li>Browse: <a href="commrings">commutative rings</a> | <a href="commproperties">commutative ring properties</a> </li>
-<li>Search: <a href="commsearch">commutative rings</a> | commutative ring properties </li>
 
 
-<h2>Get involved</h2>
-<li><a href="contribute">Contribute items or citations to the database</a> (Don't worry, if you can't think of a ring
-    or citation to contribute, you can get a random recommendation.)</li>
-<li>Help us on <a href="https://github.com/rschwiebert/RingApp">GitHub</a></li>
 
-
-<h2>Learn about ring theory</h2>
-
-<li><a href="resources">Online resources for the subject, its history, and some of its contributors</a></li>
-<li><a href="bibliography">Bibliography</a>: our list of cited works</li>
-
-<h2>You might also like</h2>
-<li><a href="http://topology.jdabbs.com/">π-Base</a>: A community database of topological examples with
-    automated deduction and powerful search</li>
-<li><a href="http://grdb.lboro.ac.uk/">Graded Ring Database</a>: A database of graded rings in algebraic geometry</li>
-<li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its
-    Applications</a> at Ohio University</li>
-<li><a href="http://stacks.math.columbia.edu/">The Stacks Project</a>: an open source textbook and reference work on
-    algebraic stacks and the algebraic geometry needed to define them</li>
-<li><a href="http://ncatlab.org/nlab/show/HomePage">nLab</a>: a wiki-lab for collaborative work on Mathematics,
-    Physics and Philosophy </li>
+        </div>
+        
 
 
 {% endblock %}
